Add Lookahead comparisons

--- a/bellman_control.tex
+++ b/bellman_control.tex
@@ -134,8 +134,8 @@ Let the demand function be given by
 We assume the exogenous disturbance process is a sequence of
 i.i.d.~shifted Beta-distributed random variables with mean 1 and variance
 $\gamma^2$. That is, we set $W_t\sim \frac{1}{2}+X$, where
-$X\sim Beta(\alpha,\beta)$, and
-$\alpha=\beta=\frac{1}{8\gamma^2}-\frac{1}{2}$.
+$X\sim Beta(\mu,\nu)$, and
+$\mu=\nu=\frac{1}{8\gamma^2}-\frac{1}{2}$.
 
 Set $\gamma = 5\times 10^{-2}$, $C=1$ and $T=3$.
 The solution to the Bellman equation, and the corresponding optimal
