--- a/introduction.tex
+++ b/introduction.tex
@@ -12,35 +12,31 @@
   \item Many heuristics or approximations, investigate how well they
     do
   \item Won't go into computational costs
-  \item Risk-aversion. Expected utility
+  %\item Risk-aversion. Expected utility
   \end{itemize}
 \item Approximations
   \begin{itemize}
-    \item Introduce lookahead: certainty equivalent and extension
   \item Theoretical results from Bertsekas, do they fit with these methods?
-  \item Comparison of profits
-  \item Comparison of price trajectories?
   \end{itemize}
 \item Model miss-specification
   \begin{itemize}
-  \item Model won't be 100\% correct. How stable are these methods to miss-specification
   \item Compare CEC with Bellman: mean, variance, distribution
     miss-specification
-  \item Compare lookahead with multiple scenarios when we have mean miss-specification
+  \item Compare lookahead with multiple scenarios when we have mean miss-specification?
   \item (Shall we argue for Bellman robustness as with parabolic equations?)
   \end{itemize}
-\item Risk-aversion
-  \begin{itemize}
-  \item Motivation: product manager judged on profit over whole
-    period. Company judged on quarterly/yearly profits/revenues, below worse
-    than above expected?
-  \item Reformulate with revenue as state
-  \item CARA:~revenue does not make a difference. Show
-  \item CRRA:~increasing price with increasing revenue. Run
-    experiments with $T=2$ or $T=3$
-  \item Quadratic:~opposite behaviour. Just mention
-  \item These are all expected due to (C/D/I)ARA
-  \end{itemize}
+% \item Risk-aversion
+%   \begin{itemize}
+%   \item Motivation: product manager judged on profit over whole
+%     period. Company judged on quarterly/yearly profits/revenues, below worse
+%     than above expected?
+%   \item Reformulate with revenue as state
+%   \item CARA:~revenue does not make a difference. Show
+%   \item CRRA:~increasing price with increasing revenue. Run
+%     experiments with $T=2$ or $T=3$
+%   \item Quadratic:~opposite behaviour. Just mention
+%   \item These are all expected due to (C/D/I)ARA
+%   \end{itemize}
 \item Conclusion
   \begin{itemize}
   \item Approximations used in industry. Understanding how well they
