--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,7 @@
 \subfile{control_comparison}
 \subfile{model_uncertainty}
 % \subfile{expected_utility}
-% \subfile{conclusion}
+\subfile{conclusion}
 
 % Bibliography:
 \clearpage
