--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,5 @@
 @article{bertsekas2005survey,
-  title={Dynamic programming and suboptimal control: A survey from ADP to MPC},
+  title={Dynamic programming and suboptimal control: A survey from {ADP} to {MPC}},
   author={Bertsekas, Dimitri P},
   journal={European Journal of Control},
   volume={11},
