Small changes to model uncertainty

--- a/model_uncertainty.tex
+++ b/model_uncertainty.tex
@@ -245,8 +245,8 @@ the true uncertainty $W^\dagger$.
   \end{subfigure}
   \caption{Performance of Bellman and CEC when the true system disturbances
   are transformations $W_1^\dagger,W_2^\dagger$ of
-  a $\chi_5^2$ distribution. Compare to
-  \Cref{fig:markdown_bellman_values,fig:markdown_bellman_mpc_1_20_100}.
+  a $\chi_5^2$ distribution. Compare with the performance in
+  \Cref{fig:bellman_simulation,fig:bellman_det_vals}, when $W=W^\dagger$.
   The relative performance of CEC compared to Bellman does not
   change much,
   although we see a slight deterioration for the under-estimation of
@@ -255,6 +255,8 @@ the true uncertainty $W^\dagger$.
 }\label{fig:markdown_bellman_mpc_chi2}
 \todo[inline]{Rethink the ``skewness''-descriptions}
 \end{figure}
+
+\todo[inline]{Conclude: frequent parameter estimation most important for CEC}
 
 \biblio
 \end{document}
